# ordo

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_ja.md  docker-compose.yml  install.sh  mise.toml
.github/workflows/: ci.yml  release.yml
crates/ordo/: Cargo.toml
crates/ordo-arsenal/: Cargo.toml
crates/ordo-arsenal/src/: lib.rs  platform.rs  registry.rs
crates/ordo-backend/: Cargo.toml
crates/ordo-backend/src/: build_graph_builder.rs  lib.rs  ninja.rs
crates/ordo-backend/src/compiler/: clang.rs  gcc.rs  mod.rs  msvc.rs
crates/ordo-backend/src/lua/: mod.rs
crates/ordo-backend/src/provider/: brew.rs  clib.rs  conan.rs  git.rs  mod.rs  nuget.rs  pacman.rs  pkgconfig.rs  system.rs  vcpkg.rs
crates/ordo-cli/: Cargo.toml
crates/ordo-cli/src/: add.rs  build.rs  check.rs  clean.rs  context.rs  fmt.rs  init.rs  lib.rs  lint.rs  lock.rs  new.rs  run.rs  run_script.rs  style.rs  test.rs  toolchain.rs  tree.rs  update.rs
crates/ordo-core/: Cargo.toml
crates/ordo-core/src/: build_graph.rs  config.rs  lib.rs  lockfile.rs  manifest.rs  resolver.rs  tester.rs  workspace.rs
crates/ordo-core/src/error/: mod.rs
crates/ordo-faber/: Cargo.toml
crates/ordo-faber/src/: lib.rs
crates/ordo-forma/: Cargo.toml
crates/ordo-vigil/: Cargo.toml
crates/ordo/src/: main.rs
docs/: draft.md
docs/implementation/: plan.md
docs/implementation/tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-024.md  TASK-025.md  TASK-026.md  TASK-027.md  TASK-028.md  TASK-029.md  TASK-030.md  TASK-031.md  TASK-032.md  TASK-033.md  TASK-034.md  TASK-035.md  TASK-036.md
docs/requirements/: REQ-BUILD.md  REQ-CLI.md  REQ-DEPS.md  REQ-IDE.md  REQ-LUA.md  REQ-MOD.md  REQ-PKG.md  REQ-PROJ.md  REQ-QUAL.md  REQ-SEC.md  REQ-TEST.md  REQ-TOOL.md  REQ-WORK.md  overview.md
docs/specifications/: architecture.md  cli-style.md  data-model.md
src/: main.rs
src/backend/: mod.rs  ninja.rs
src/backend/compiler/: clang.rs  gcc.rs  mod.rs  msvc.rs
src/backend/lua/: runtime.rs  sandbox.rs
src/backend/provider/: brew.rs  clib.rs  conan.rs  git.rs  mod.rs  nix.rs  nuget.rs  pacman.rs  pkgconfig.rs  system.rs  vcpkg.rs
src/cli/: add.rs  build.rs  check.rs  clean.rs  context.rs  fmt.rs  init.rs  lint.rs  mod.rs  new.rs  run.rs  run_script.rs  test.rs  tree.rs  update.rs
src/core/: config.rs  lockfile.rs  manifest.rs  mod.rs  resolver.rs  tester.rs  workspace.rs
src/error/: codes.rs  mod.rs
src/util/: mod.rs  paths.rs  style.rs
