[package]
name = "ordo"
version = "0.1.4"
edition = "2024"
rust-version = "1.95"
description = "A modern project orchestrator for C and C++"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
dirs = "6"
indicatif = "0.17"
miette = { version = "7", features = ["fancy"] }
owo-colors = { version = "4", features = ["supports-colors"] }
pubgrub = "0.4"
semver = "1"
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
promptuity = "0.0.5"
glob = "0.3.3"
mlua = { version = "0.11.6", features = ["lua54", "serialize", "send", "vendored"] }
sha2 = "0.11.0"

[dev-dependencies]
