[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
toml_edit = "0.22"
glob = "0.3.3"
sha2 = "0.11.0"
semver = "1"
pathdiff = "0.2"
ordo-core = { path = "crates/ordo-core" }
ordo-backend = { path = "crates/ordo-backend" }
ordo-faber = { path = "crates/ordo-faber" }
ordo-cli = { path = "crates/ordo-cli" }
ordo-arsenal = { path = "crates/ordo-arsenal" }
