[package]
name = "ordo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types and logic for Ordo"
license.workspace = true

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }
pubgrub = "0.4"
dirs = "6"
glob = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
