[package]
name = "ordo-faber"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Built-in parallel build engine for Ordo (beta)"

[dependencies]
ordo-core = { workspace = true }
miette = { workspace = true }
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tempfile = { workspace = true }
